got survey page content in

--- a/app/routing/public/home.html
+++ b/app/routing/public/home.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>You are in the home page!</h1>
+        <h1>You are in the some god damned page!</h1>
     </body>
 </html>
