most of logic is done

--- a/app/routing/public/home.html
+++ b/app/routing/public/home.html
@@ -1,5 +1,22 @@
 <html>
+    <header>
+        <!-- Links to various things -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+            <script src="https://code.jquery.com/jquery.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    </header>
     <body>
-        <h1>You are in the some god damned page!</h1>
+        <div class="container" style="text-align:center;">
+            <div class="jumbotron">
+                <h1>Friend Finder ;)</h1>
+                </br>
+                <h3>“How many slams in an old screen door? Depends how loud you shut it. How many slices in a bread? Depends how thin you cut it. How much good inside a day? Depends how good you live ’em. How much love inside a friend? Depends how much you give ’em.”
+                        – Shel Silverstein</h3>
+                <h3>You have come here to find a friend, I see? Do not worry, Devanshi will find you a friend. Trust her, she has, like, so many friends.</h3>
+            </div>
+        </div>
+
+        <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
     </body>
+    
 </html>
